Ajout shop page and design modifs

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -10,7 +10,7 @@
 		          <h3 class="masthead-brand">Home</h3>
 		          <nav class="nav nav-masthead justify-content-center">
 		            <a class="nav-link active" href="#">Home</a>
-		            <a class="nav-link" href="/billeterie">Billeterie en ligne</a>
+		            <a class="nav-link" href="/billetterie">Billetterie en ligne</a>
 		            <a class="nav-link" href="/mentions">Mentions légales</a>
 		            <a class="nav-link" href="/contact">Contact</a>
 		          </nav>
