--- a/templates/contact.html.twig
+++ b/templates/contact.html.twig
@@ -3,15 +3,69 @@
 {% block title %}Formulaire de Contact{% endblock %}
 
 {% block body %}
-	<header><h1>Veuillez remplir le formulaire</h1></header>
 
-	{# Formulaire de contact #}
-	{{ form_start(form) }}
-	{{ form_row(form.username) }}
-	{{ form_row(form.message) }}
-	{{ form_row(form.from.first) }}
-	{{ form_row(form.from.second) }}
+	<body class="text-center">
 
-	<button type="submit" name="Contact"></button>
-{{ form_end(form) }}
+		<div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
+	    	<header class="masthead mb-auto">
+		        <div class="inner">
+		          <h3 class="masthead-brand">Home</h3>
+		          <nav class="nav nav-masthead justify-content-center">
+		            <a class="nav-link active" href="/">Home</a>
+		            <a class="nav-link" href="/billetterie">Billetterie en ligne</a>
+		            <a class="nav-link" href="/mentions">Mentions légales</a>
+		            <a class="nav-link" href="/contact">Contact</a>
+		          </nav>
+		        </div>
+	    	</header>
+
+			{# Formulaire de contact 
+			{{ form_start(form) }} 
+			{{ form_row(form.username) }}
+			{{ form_row(form.from) }}
+			{{ form_row(form.message) }}#}
+
+			<div class="container">
+    			<div class="card">
+        			<div class="card-header">
+            			Veuillez remplir le formulaire
+        			</div>
+        			<div class="card-block">
+            			<form role="form">
+                			<div class="form-group col-lg-4">
+                    			<label class="form-control-label" for="form-group-input">Username</label>
+                    			<input type="text" class="form-control" id="form-group-input" name="username">
+               				 </div>
+                			<div class="form-group col-lg-4">
+                    			 <label class="form-control-label" for="form-group-input">Email</label>
+                   				 <input type="text" class="form-control" id="form-group-input" name="email">
+                			</div>
+                			<div class="form-group col-lg-4">
+                    			<label class="form-control-label" for="form-group-input">Reason</label>
+                    			<select size="0" class="form-control" name="reason">
+                       			 	<option>Renseignement</option>
+                       			 	<option>La Billetterie</option>
+                        			<option>Problème technique</option>
+                       				<option>Autre</option>
+                    			</select>
+               				</div>
+                			<div class="form-group col-lg-12">
+			                    <label class="form-control-label" for="form-group-input">Message</label>
+			                    <textarea class="form-control" id="form-group-input" name="message" rows="6"></textarea>
+                			</div>
+                			<button type="submit" class="btn btn-primary">Submit</button>
+           				 </form>
+        			</div>
+    			</div>
+			</div>
+			
+			{#Footer#}
+		    <footer class="mastfoot mt-auto">
+		    	<div class="inner">
+		        	<p class="copyright text-muted">Copyright &copy; Site fictif pour Openclassrooms, par Emmanuel Auguier</p>
+		        </div>
+		    </footer>
+	    </div>
+	</body>
+
 {% endblock %}
