--- a/templates/mentions.html.twig
+++ b/templates/mentions.html.twig
@@ -10,66 +10,58 @@
                   <h3 class="masthead-brand">Mentions légales</h3>
                   <nav class="nav nav-masthead justify-content-center">
                     <a class="nav-link active" href="/">Home</a>
-                    <a class="nav-link" href="/billeterie">Billeterie en ligne</a>
+                    <a class="nav-link" href="/billetterie">Billetterie en ligne</a>
                     <a class="nav-link" href="/mentions">Mentions légales</a>
                     <a class="nav-link" href="/contact">Contact</a>
                   </nav>
                 </div>
             </header>
             {#BodyContainer#}
-            <div class="container">
                 <div class="row">
-                    <div class="col-lg-12">
-                                <div class="panel panel-default">
-                                    <div class="panel-heading">
-                                        <h3 class="panel-title text-center">1 - Objet</h3>
-                                    </div>
-                                    <div class="panel-body text-left">
-                                        <p>
-                                           Les présentes conditions générales de vente ont pour objet de définir les dispositions contractuelles entre l'Etablissement Public du fictif Musée du Louvre,</br>
-                                            Etablissement public à caractère administratif regroupant le fictif musée national du Louvre et le fictif musée national Eugène Delacroix, conformément aux dispositions du décret n° xx-xxx du 01/01/2018 modifié portant création de l'Etablissement Public du fictif Musée du Louvre.</br>
-                                            Siret n° xxx xxx xxx xxx xx - APE n° APE xxxxx.</br>
-                                            Domicilié fictif Musée du Louvre - 75058 Paris Cedex 01 – France.</br>
-                                            Contrat commerçant : xxxxxx BILLETTERIE INTERNET</br>
-                                            et toute personne physique ou morale (ci-après dénommée l'acheteur) achetant des billets individuels sur le site de vente en ligne de billets « www.labilleterie.fr ». 
-                                        </p>
-                                        <p>
-                                            L’acheteur reconnaît avoir pris connaissance des présentes conditions générales de vente préalablement à la validation de sa commande. Le fait de passer commande vaut acceptation par l’acheteur des présentes conditions générales de vente. 
-                                        </p>
-                                        <p>
-                                            L’EPML se réserve la possibilité d'adapter ou de modifier à tout moment les présentes conditions générales de vente. En cas de modification, les conditions applicables à un achat sont celles en vigueur au jour de la commande. 
-                                        </p>
-                                    </div>
-                                </div>
+                    <div class="col-sm-2">
+                        <div class="card text-white bg-info mb-3" style="max-width: 18rem;">
+                          <div class="card-header">1 - Objet</div>
+                          <div class="card-body">
+                            <p>
+                                Les présentes conditions générales de vente ont pour objet de définir les dispositions contractuelles entre l'Etablissement Public du fictif Musée du Louvre,</br>
+                                Etablissement public à caractère administratif regroupant le fictif musée national du Louvre et le fictif musée national Eugène Delacroix, conformément aux dispositions du décret n° xx-xxx du 01/01/2018 modifié portant création de l'Etablissement Public du fictif Musée du Louvre.</br>
+                                Siret n° xxx xxx xxx xxx xx - APE n° APE xxxxx.</br>
+                                Domicilié fictif Musée du Louvre - 75058 Paris Cedex 01 – France.</br>
+                                Contrat commerçant : xxxxxx BILLETTERIE INTERNET</br>
+                                et toute personne physique ou morale (ci-après dénommée l'acheteur) achetant des billets individuels sur le site de vente en ligne de billets « www.labilleterie.fr ». 
+                            </p>
+                            <p>
+                                L’acheteur reconnaît avoir pris connaissance des présentes conditions générales de vente préalablement à la validation de sa commande. Le fait de passer commande vaut acceptation par l’acheteur des présentes conditions générales de vente. 
+                            </p>
+                            <p>
+                                L’EPML se réserve la possibilité d'adapter ou de modifier à tout moment les présentes conditions générales de vente. En cas de modification, les conditions applicables à un achat sont celles en vigueur au jour de la commande. 
+                            </p>
+                          </div>
+                        </div>
                     </div>
-                </div>
-                <div class="row col-lg-12">
-                            <div class="panel panel-primary">
-                                <div class="panel-heading">
-                                    <h3 class="panel-title text-center">2 - Champ d’application des présentes conditions générales de vente</h3>
-                                </div>
-                                <div class="panel-body text-left">
-                                    <p>
-                                       Sont proposés sur le site « www.labilleterie.fr » de vente en ligne des billets pour les prestations suivantes : </br>
-                                        Fictif Musée du Louvre, permettant l’accès aux collections permanentes et expositions temporaires du musée du Louvre, donnant également accès aux collections et expositions temporaires du fictif musée Eugène Delacroix et à l'antenne du musée du quai Branly au Louvre.
-                                        Audioguide, correspondant à la location de l’audioguide du musée du Louvre et permettant de le retirer aux comptoirs de distribution situés aux entrées des collections. Un document d’identité en cours de validité sera demandé en dépôt lors du retrait de l’audioguide.
-                                    </p>
-                                    <p>
-                                        Le site Internet informe l’acheteur de la disponibilité des prestations au moment de la passation de la commande.
-                                    </p>
-                                    <p>
-                                        Le nombre de billets vendus en ligne par commande et par personne est limité comme suit : 
-                                    </p>
-                                </div>
-                            </div>
-                </div>
-                <div class="row col-lg-12">
-                            <div class="panel panel-primary">
-                                <div class="panel-heading">
-                                    <h3 class="panel-title text-center">3 - Présentation des billets </h3>
-                                </div>
-                                <div class="panel-body text-left">
-                                    <p>
+                    <div class="col-sm-2">
+                        <div class="card text-white bg-info mb-3" style="max-width: 18rem;">
+                          <div class="card-header">2 - Champ d’application des présentes conditions générales de vente</div>
+                          <div class="card-body">
+                            <p>
+                                Sont proposés sur le site « www.labilleterie.fr » de vente en ligne des billets pour les prestations suivantes : </br>
+                                Fictif Musée du Louvre, permettant l’accès aux collections permanentes et expositions temporaires du musée du Louvre, donnant également accès aux collections et expositions temporaires du fictif musée Eugène Delacroix et à l'antenne du musée du quai Branly au Louvre.
+                                Audioguide, correspondant à la location de l’audioguide du musée du Louvre et permettant de le retirer aux comptoirs de distribution situés aux entrées des collections. Un document d’identité en cours de validité sera demandé en dépôt lors du retrait de l’audioguide.
+                            </p>
+                            <p>
+                                 Le site Internet informe l’acheteur de la disponibilité des prestations au moment de la passation de la commande.
+                            </p>
+                            <p>
+                                Le nombre de billets vendus en ligne par commande et par personne est limité comme suit : 
+                            </p>
+                          </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-2">
+                        <div class="card text-white bg-info mb-3" style="max-width: 18rem;">
+                          <div class="card-header">3 - Présentation des billets</div>
+                          <div class="card-body">
+                            <p>
                                        Le billet est imprimable à la validation du règlement. Il est accessible sous format PDF et peut être utilisé depuis le courriel de confirmation. 
                                     </p>
                                     <p>
@@ -89,16 +81,14 @@
                                         - la date d’achat du billet</br>
                                         - les mentions : Billet valable pour 1 visiteur individuel, non valable pour une visite en groupe ; Ne peut être revendu ; Toute sortie est définitive.
                                     </p>
-                                </div>
-                            </div>
-                </div>
-                <div class="row col-lg-12">
-                            <div class="panel panel-primary">
-                                <div class="panel-heading">
-                                    <h3 class="panel-title text-center">4 - Conditions d’utilisation</h3>
-                                </div>
-                                <div class="panel-body text-left">
-                                    <p>
+                          </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-2">
+                        <div class="card text-white bg-info mb-3" style="max-width: 18rem;">
+                          <div class="card-header">4 - Conditions d’utilisation</div>
+                            <div class="card-body">
+                                <p>
                                        Les billets achetés en ligne sont horodatés et valables exclusivement pour la prestation, à la date et à compter de l’heure mentionnées. 
                                     </p>
                                     <p>
@@ -134,16 +124,14 @@
                                     <p>
                                        Les valises et sacs de grande contenance sont interdits. Seuls les bagages n’excédant pas les tailles maximales de 55cm x 35cm x 20cm sont autorisés dans les espaces d’accueil. Ils ne sont pas admis dans les collections et doivent impérativement être déposés aux vestiaires après avoir été contrôlés. 
                                     </p>
-                                </div>
                             </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="row col-lg-12">
-                            <div class="panel panel-primary">
-                                <div class="panel-heading">
-                                    <h3 class="panel-title text-center">5 - Modalités de commande</h3>
-                                </div>
-                                <div class="panel-body text-left">
-                                    <p>
+                        <div class="card text-white bg-info mb-3" style="max-width: 18rem;">
+                          <div class="card-header">5 - Modalités de commande</div>
+                          <div class="card-body">
+                            <p>
                                        L’acheteur effectue son achat de billet en ligne comme suit : 
                                     </p>
                                     <p>
@@ -170,8 +158,8 @@
                                     <p>
                                         La Billetterie se réserve le droit de refuser toute commande d'un client qui n’observerait pas ses conditions générales de vente.
                                     </p>
-                                </div>
-                            </div>
+                          </div>
+                        </div>
                 </div>
                 <div class="row col-lg-12">
                             <div class="panel panel-primary">
