--- a/templates/contact.html.twig
+++ b/templates/contact.html.twig
@@ -19,45 +19,30 @@
 		        </div>
 	    	</header>
 
-			{# Formulaire de contact 
+			{# Formulaire de contact #}
 			{{ form_start(form) }} 
-			{{ form_row(form.username) }}
-			{{ form_row(form.from) }}
-			{{ form_row(form.message) }}#}
-
 			<div class="container">
     			<div class="card">
         			<div class="card-header">
             			Veuillez remplir le formulaire
         			</div>
         			<div class="card-block">
-            			<form role="form">
-                			<div class="form-group col-lg-4">
-                    			<label class="form-control-label" for="form-group-input">Username</label>
-                    			<input type="text" class="form-control" id="form-group-input" name="username">
-               				 </div>
-                			<div class="form-group col-lg-4">
-                    			 <label class="form-control-label" for="form-group-input">Email</label>
-                   				 <input type="text" class="form-control" id="form-group-input" name="email">
-                			</div>
-                			<div class="form-group col-lg-4">
-                    			<label class="form-control-label" for="form-group-input">Reason</label>
-                    			<select size="0" class="form-control" name="reason">
-                       			 	<option>Renseignement</option>
-                       			 	<option>La Billetterie</option>
-                        			<option>Problème technique</option>
-                       				<option>Autre</option>
-                    			</select>
-               				</div>
-                			<div class="form-group col-lg-12">
-			                    <label class="form-control-label" for="form-group-input">Message</label>
-			                    <textarea class="form-control" id="form-group-input" name="message" rows="6"></textarea>
-                			</div>
-                			<button type="submit" class="btn btn-primary">Submit</button>
-           				 </form>
+        				<form>
+        					<div class="form-group">
+        						{{ form_row(form.username) }}
+        					</div>
+        					<div class="form-group">
+        						{{ form_row(form.from) }}
+        					</div>
+        					<div class="form-group">
+        						{{ form_row(form.message) }}
+        					</div>
+        					<button type="submit" class="btn btn-primary">Envoyer</button>
+        				</form>
         			</div>
     			</div>
 			</div>
+			{{ form_end(form) }} 
 			
 			{#Footer#}
 		    <footer class="mastfoot mt-auto">
