add header img, modification menu

--- a/templates/Shop/shop.html.twig
+++ b/templates/Shop/shop.html.twig
@@ -6,9 +6,9 @@
 		<div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
 	    	<header class="masthead mb-auto">
 		        <div class="inner">
-		          <h3 class="masthead-brand">Home</h3>
+		          <h3 class="masthead-brand">Billetterie en ligne</h3>
 		          <nav class="nav nav-masthead justify-content-center">
-		            <a class="nav-link active" href="#">Home</a>
+		            <a class="nav-link active" href="/">Home</a>
 		            <a class="nav-link" href="/billetterie">Billetterie en ligne</a>
 		            <a class="nav-link" href="/mentions">Mentions légales</a>
 		            <a class="nav-link" href="/contact">Contact</a>
