--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -2,6 +2,8 @@
 
 {% block body %}
 	{#Header#}
+	<img src="{{ asset('Louvre_Museum_Wikimedia_Commons.jpg') }}" class="img-fluid" alt="Responsive image">
+
 	<body class="text-center">
 
 		<div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
