--- a/templates/contact.html.twig
+++ b/templates/contact.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Formulaire de Contact{% endblock %}
 
 {% block body %}
+	<img src="{{ asset('Louvre_Museum_Wikimedia_Commons.jpg') }}" class="img-fluid" alt="Responsive image">
 
 	<body class="text-center">
 
