Add html modifs, billet entity

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,11 +7,37 @@
         {% block stylesheets %}
             <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"/>
             <link rel="stylesheet" href="{{ asset('cookiealert.css') }}"/>
-            <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
+            <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.0-alpha14/js/tempusdominus-bootstrap-4.min.js"></script>
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.0-alpha14/css/tempusdominus-bootstrap-4.min.css" />
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        <img src="{{ asset('Louvre_Museum_Wikimedia_Commons.jpg') }}" class="img-fluid" alt="Responsive image">
+        
+        <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
+            <header class="masthead mb-auto">
+                <div class="inner">
+                  <h3 class="masthead-brand">Home</h3>
+                  <nav class="nav nav-masthead justify-content-center">
+                    <a class="nav-link active" href="/">Home</a>
+                    <a class="nav-link" href="/billetterie">Billetterie en ligne</a>
+                    <a class="nav-link" href="/mentions">Mentions légales</a>
+                    <a class="nav-link" href="/contact">Contact</a>
+                  </nav>
+                </div>
+            </header>
+        </div>
+
+        {% block body %}
+        {% endblock %}
+
+            {#Footer#}
+            <footer class="mastfoot mt-auto">
+                <div class="inner">
+                    <p class="copyright text-muted">Copyright &copy; Site fictif pour Openclassrooms, par Emmanuel Auguier</p>
+                </div>
+            </footer>
+
         {% block javascripts %}
             <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
@@ -22,4 +48,4 @@
             <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
         {% endblock %}
     </body>
-</html>
+</html
