--- a/templates/Shop/shopTicket.html.twig
+++ b/templates/Shop/shopTicket.html.twig
@@ -1,10 +1,44 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}La Billetterie{% endblock %}
+
 {% block body %}
 
-{% endblock %}
+    <div class="text-center">
+        {{ form_start(form) }}
+        <div class="container">
+            <div class="card">
+                <div class="card-header">
+                    2eme étape
+                </div>
+                <div class="card-block">
 
-{% block title %}
+                    <div class="form-group">
+                        {{ form_row(form.tickets) }}
+                    </div>
+                    <div class="form-group">
+                        {{ form_row(form.firstName) }}
+                    </div>
+                    <div class="form-group">
+                        {{ form_row(form.lastName) }}
+                    </div>
+                    <div class="form-group">
+                        {{ form_row(form.country) }}
+                    </div>
+                    <div class="form-group">
+                        {{ form_row(form.birthday) }}
+                    </div>
+                    <div class="form-group">
+                        {{ form_row(form.rate) }}
+                    </div>
+
+                    <button type="submit" class="btn btn-primary">Ajouter</button>
+
+                </div>
+            </div>
+        </div>
+        {{ form_end(form) }}
+    </div>
 
 {% endblock %}
 
