--- a/templates/Shop/shopTicket.html.twig
+++ b/templates/Shop/shopTicket.html.twig
@@ -16,23 +16,7 @@
                     <div class="form-group">
                         {{ form_row(form.tickets) }}
                     </div>
-                    <div class="form-group">
-                        {{ form_row(form.firstName) }}
-                    </div>
-                    <div class="form-group">
-                        {{ form_row(form.lastName) }}
-                    </div>
-                    <div class="form-group">
-                        {{ form_row(form.country) }}
-                    </div>
-                    <div class="form-group">
-                        {{ form_row(form.birthday) }}
-                    </div>
-                    <div class="form-group">
-                        {{ form_row(form.rate) }}
-                    </div>
-
-                    <button type="submit" class="btn btn-primary">Ajouter</button>
+                    <button type="submit" class="btn btn-primary">Continuer</button>
 
                 </div>
             </div>
