--- a/templates/Shop/shopBasket.html.twig
+++ b/templates/Shop/shopBasket.html.twig
@@ -8,11 +8,21 @@
         <div class="container">
             <div class="card">
                 <div class="card-header">
-                    3eme étape
+                    3eme étape - Le Panier
                 </div>
                 <div class="card-block">
 
-                    <button type="submit" class="btn btn-primary">Continuer</button>
+                    {% if app.session.get('order') is not null %}
+                        {% set order = app.session.get('order') %}
+
+                            <p>Nombre de Tickets : {{ order.quantite }}</p>
+                            <p>Pour la {{ order.type }} du {{ order.date|date("d-m-y") }}</p>
+                            <p>{{ order.tickets }}</p>
+                            <br><p>Total du panier : {{ order.totalPrice }} €.</p>
+
+                    {% endif %}
+
+                    <button type="submit" class="btn btn-primary">Procéder au paiement</button>
 
                 </div>
             </div>
