--- a/templates/Shop/shopTicket.html.twig
+++ b/templates/Shop/shopTicket.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-    <div class="text-center">
+    <body class="text-center">
         {{ form_start(form) }}
         <div class="container">
             <div class="card">
@@ -22,7 +22,7 @@
             </div>
         </div>
         {{ form_end(form) }}
-    </div>
+    </body>
 
 {% endblock %}
 
