Add stripe paiements(sucess)

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,6 +29,12 @@
             </header>
         </div>
 
+        {% for message in app.flashes('success') %}
+            <div class="alert alert-success" role="alert">
+                {{ message }}
+            </div>
+        {% endfor %}
+
         {% block body %}
         {% endblock %}
 
