--- a/templates/Shop/shopBasket.html.twig
+++ b/templates/Shop/shopBasket.html.twig
@@ -12,13 +12,12 @@
                 </div>
                 <div class="card-block">
 
-                        {#<table class="table-primary table-striped">
-                            <thead>
+                        <table class="table table-hover">
+                            <thead class="table-primary">
                             <tr>
                                 <th scope="col">Nombre de Tickets</th>
                                 <th scope="col">Type</th>
                                 <th scope="col">Date</th>
-                                <th scope="col">Ticket</th>
                                 <th scope="col">Total</th>
                             </tr>
                             </thead>
@@ -27,20 +26,47 @@
                                 <th scope="row">{{ order.quantite }}</th>
                                 <td>{{ order.type }}</td>
                                 <td>{{ order.date|date("d-m-y") }}</td>
-                                <td>{{ order.tickets }}</td>
                                 <td>{{ order.totalPrice }} €</td>
                             </tr>
                             </tbody>
-                        </table>#}
+                        </table>
 
-                            <p>Nombre de Tickets : {{ order.quantite }}</p>
-                            <p>Pour la {{ order.type }} du {{ order.date|date("d-m-y") }}</p>
-                            {% for ticket in order.tickets %}
-                                {{ ticket.firstName }}
-                            {% endfor %}
-                            <br><p>Total du panier : {{ order.totalPrice }} €.</p>
+                        <table class="table table-hover">
+                            <thead class="table-danger">
+                            <tr>
+                                <th scope="col">Prénom</th>
+                                <th scope="col">Nom</th>
+                                <th scope="col">Pays</th>
+                                <th scope="col">Date de naissance</th>
+                                <th scope="col">Réduction</th>
+                                <th scope="col">Prix</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                {% for ticket in order.tickets %}
+                                    <td>{{ ticket.firstName }}</td>
+                                    <td>{{ ticket.lastName }}</td>
+                                    <td>{{ ticket.country }}</td>
+                                    <td>{{ ticket.birthday|date("d-m-y") }}</td>
+                                    <td>{{ ticket.rate }}</td>
+                                    <td>{{ ticket.price }} €</td>
+                                {% endfor %}
+                            </tr>
+                            </tbody>
+                        </table>
 
-                    <button type="submit" class="btn btn-primary">Paiement Stripe</button>
+                    <form action="{{ path('basket') }}" method="POST">
+                        <script
+                                src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+                                data-key="pk_test_zSFZWOeL3K8JsZTWvcrgHJMr"
+                                data-amount="{{ order.totalPrice * 100 }}"
+                                data-name="Musee Louvre Ticket"
+                                data-description="Widget"
+                                data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
+                                data-locale="auto">
+                        </script>
+                    </form>
 
                 </div>
             </div>
